Plugin parameters.
When calling a plugin, i.e. a FileConverter during indexing, you can now pass additional parameters. This allows you to e.g. have a part of speech tagging plugin that can take a language parameter alongside its input file.

These additional parameters are always validated against against the Plugin's parameter declarations. These include basic type and extra restrictions, e.g. a regex that must match, or a range in which a number must fall.

Commandline tools such as IndexTool allow all plugins to be used. BlackLab Server does not; only plugins where isWebSafe() returns true, or that have been added to the plugins.allowed whitelist, are allowed to run in BlackLab Server. This is to prevent accidentally exposing a carelessly written plugin to be exploited by malicious users.

See https://blacklab.ivdnt.org/development/customization/ for full details.

===

Squashed commit of the following:

commit d93b0b9396509b8dd942e8da86f6f3550cf12814
Author: Jan Niestadt <jan.niestadt@ivdnt.org>
Date:   Tue Apr 28 11:55:04 2026 +0200

    Don't default some plugin types to web-safe. Docs.

commit 46664ee16bcfe397895a961d54f8bb42052e26a2
Author: Jan Niestadt <jan.niestadt@ivdnt.org>
Date:   Mon Apr 27 10:55:19 2026 +0200

    Improve QueryFunction parameter validation.

commit 418f1b40875d955e77735c064897579126628480
Author: Jan Niestadt <jan.niestadt@ivdnt.org>
Date:   Mon Apr 27 10:29:48 2026 +0200

    QueryFunctions use same types. isWebSafe() method.

commit 742cd1fe15e250bb711cb6302fd278fd0d16d703
Author: Jan Niestadt <jan.niestadt@ivdnt.org>
Date:   Fri Apr 24 09:05:52 2026 +0200

    Add types for QueryFunction.

commit acb20eb5cee7c0dfde9f86c3553b8c67c6fdb282
Author: Jan Niestadt <jan.niestadt@ivdnt.org>
Date:   Thu Apr 23 15:50:11 2026 +0200

    WIP BLS ExtraConverters. Indexer cleanup.

commit 9382c648e042a1fb73afe97bb33c1d5898c8475a
Author: Jan Niestadt <jan.niestadt@ivdnt.org>
Date:   Thu Apr 23 13:37:36 2026 +0200

    FileConverter params in .blf