@@ -6,8 +6,11 @@ import java.util.List;
 import org.apache.commons.lang3.StringUtils;
 
 import nl.inl.blacklab.exceptions.InvalidQuery;
-import nl.inl.blacklab.plugins.ExprType;
 import nl.inl.blacklab.plugins.QueryFunction;
+import nl.inl.blacklab.plugins.param.PEnum;
+import nl.inl.blacklab.plugins.param.PList;
+import nl.inl.blacklab.plugins.param.PQuery;
+import nl.inl.blacklab.plugins.param.PString;
 import nl.inl.blacklab.search.QueryExecutionContext;
 import nl.inl.blacklab.search.indexmetadata.AnnotatedField;
 import nl.inl.blacklab.search.indexmetadata.AnnotatedFieldNameUtil;
@@ -32,14 +35,6 @@ public class XFRelations implements ExtensionFunctionClass {
 
     public static final String FUNC_REL = "rel";
     public static final String FUNC_RSPAN = "rspan";
-    public static final String FUNC_RCAPTURE = "rcapture";
-
-    /** Default name for match info if no explicit capture name is set for a relation operator, and none could be
-        derived from the relation type filter expression. */
-    public static final String DEFAULT_CAPTURE_NAME = "rel";
-
-    /** Default for relations captured using rcapture() */
-    public static final String DEFAULT_RCAP_NAME = "captured_rels";
 
     /** Default for relations captured using e.g. context=s */
     public static final String DEFAULT_CONTEXT_REL_NAME = "context_rels";
@@ -47,33 +42,12 @@ public class XFRelations implements ExtensionFunctionClass {
     /** Regex for matching all relations (default for rcapture) */
     public static final String REGEX_RELATIONS_ALL_CLASSES_ALL_TYPE = RelationUtil.fullTypeRegex(".+", ".+");
 
-    /**
-     * Find relations matching type and target.
-     * <p>
-     * You can also set spanMode (defaults to "source").
-     *
-     * @param queryInfo query info
-     * @param context query execution context
-     * @param args function arguments: relation type, target, spanMode
-     * @return relations query
-     */
-    private static BLSpanQuery rel(QueryInfo queryInfo, QueryExecutionContext context, List<Object> args) {
-        String relationType = (String) args.get(0);
-        BLSpanQuery matchTarget = (BLSpanQuery) args.get(1);
-        RelationInfo.SpanMode spanMode = RelationInfo.SpanMode.fromCode((String)args.get(2));
-        String captureAs = (String)args.get(3);
-        SpanQueryRelations.Direction direction = SpanQueryRelations.Direction.fromCode((String)args.get(4));
+    /** Default name for match info if no explicit capture name is set for a relation operator, and none could be
+     derived from the relation type filter expression. */
+    private static final String DEFAULT_CAPTURE_NAME = "rel";
 
-        // Make sure relationType has a relation class
-        relationType = RelationUtil.optPrependDefaultClass(relationType, context);
-
-        // Auto-determine capture name if none was given
-        if (StringUtils.isEmpty(captureAs))
-            captureAs = determineCaptureAs(context, relationType, false);
-
-        return createRelationQuery(queryInfo, context, relationType, matchTarget, direction, captureAs, spanMode,
-                null);
-    }
+    /** Default for relations captured using rcapture() */
+    private static final String DEFAULT_RCAP_NAME = "captured_rels";
 
     public static BLSpanQuery createRelationQuery(QueryInfo queryInfo, QueryExecutionContext context, String relationType,
             BLSpanQuery matchTarget, SpanQueryRelations.Direction direction, String captureAs,
@@ -113,85 +87,37 @@ public class XFRelations implements ExtensionFunctionClass {
         return context.ensureUniqueCapture(captureName);
     }
 
-    /**
-     * Change span mode of a query with an active relation.
-     * <p>
-     * That is, change the spans the query produces to the source or target
-     * spans of the active relation, or the full relation span, or to a span
-     * covering all matched relations.
-     *
-     * @param queryInfo query info
-     * @param context query execution context
-     * @param args function arguments: query, spanMode
-     * @return span-adjusted query
-     */
-    private static BLSpanQuery rspan(QueryInfo queryInfo, QueryExecutionContext context, List<Object> args) {
-        if (args.size() < 2)
-            throw new IllegalArgumentException("rspan() requires a query and a span mode as arguments");
-        BLSpanQuery relations = (BLSpanQuery) args.get(0);
-        RelationInfo.SpanMode mode = RelationInfo.SpanMode.fromCode((String)args.get(1));
-        return new SpanQueryRelationSpanAdjust(relations, mode, null);
-    }
-
-    /**
-     * Get the hits from a specific parallel field/version.
-     *
-     * This is useful to e.g. highlight one of the versions with the hits from a parallel query.
-     *
-     * @param queryInfo query info
-     * @param context query execution context
-     * @param args function arguments: query, field or version name
-     * @return query with hits from the specified field
-     */
-    private static BLSpanQuery rfield(QueryInfo queryInfo, QueryExecutionContext context, List<Object> args) {
-        if (args.size() < 2)
-            throw new IllegalArgumentException("rfield() requires a query and a field or version name as arguments");
-        BLSpanQuery relations = (BLSpanQuery) args.get(0);
-        String fieldOrVersion = (String)args.get(1);
-        AnnotatedField field = queryInfo.index().annotatedFields().getByFieldOrVersionName(fieldOrVersion);
-        if (relations.getAnnotatedField() == field) {
-            // Nothing to do, just return query unchanged
-            return relations;
-        }
-        return new SpanQueryOtherFieldHits(relations, field);
-    }
-
-    /**
-     * Capture relations inside a span.
-     *
-     * Will capture all relations matching the specified type regex as a list
-     * under the specified capture name.
-     *
-     * @param queryInfo
-     * @param context
-     * @param args function arguments: query, captureAs, relationType
-     * @return
-     */
-    private static BLSpanQuery rcapture(QueryInfo queryInfo, QueryExecutionContext context, List<Object> args) {
-        if (args.isEmpty())
-            throw new IllegalArgumentException("rcapture() requires at least a query");
-        BLSpanQuery query = (BLSpanQuery)args.get(0);
-        String captureAs = context.ensureUniqueCapture((String)args.get(1));
-        String relationType = RelationUtil.optPrependDefaultClass((String) args.get(2), context);
-        AnnotationSensitivity field = context.withRelationAnnotation().luceneFieldRef();
-        return new SpanQueryCaptureRelationsWithinSpan(queryInfo, field, query, null, captureAs, relationType);
-    }
-
     @Override
     public void register() {
-        QueryExtensions.registerRelationsFunction(FUNC_REL, ARGS_SQSSS,
+        // rel: Find relations matching type and target.
+        QueryExtensions.registerRelationsFunction(FUNC_REL,
+                List.of(PString.any("relType"), PQuery.required("query"),
+                        PEnum.of("spanMode", RelationInfo.SpanMode.class),
+                        PString.identifier("captureAs"),
+                        PEnum.of("direction", SpanQueryRelations.Direction.class)),
                 Arrays.asList(".+", QueryFunction.VALUE_QUERY_ANY_NGRAM, "source", "", "both"),
-                (queryInfo, context, args) -> rel(queryInfo, context, args));
+                (queryInfo, context, args) -> {
+                    String relationType = (String) args.get(0);
+                    BLSpanQuery matchTarget = (BLSpanQuery) args.get(1);
+                    RelationInfo.SpanMode spanMode = RelationInfo.SpanMode.fromCode((String)args.get(2));
+                    String captureAs = (String)args.get(3);
+                    SpanQueryRelations.Direction direction = SpanQueryRelations.Direction.fromCode((String)args.get(4));
 
-        QueryExtensions.register(new QueryFunction("rmatch", List.of(ExprType.LIST),
+                    // Make sure relationType has a relation class
+                    relationType = RelationUtil.optPrependDefaultClass(relationType, context);
+
+                    // Auto-determine capture name if none was given
+                    if (StringUtils.isEmpty(captureAs))
+                        captureAs = determineCaptureAs(context, relationType, false);
+
+                    return createRelationQuery(queryInfo, context, relationType, matchTarget, direction, captureAs, spanMode,
+                            null);
+                });
+
+        // rmatch: Perform an AND operation with the additional requirement that clauses match unique relations.
+        QueryExtensions.register(new QueryFunction("rmatch", List.of(
+                PList.optional("queries", PList.Validator.ALL_QUERIES)),
                 List.of(QueryFunction.VALUE_QUERY_ANY_NGRAM), false) {
-            /**
-             * Perform an AND operation with the additional requirement that clauses match unique relations.
-             *
-             * @param context    query execution context
-             * @param parameters function arguments: clauses
-             * @return AND query with unique relations requirement
-             */
             @Override
             protected TextPattern.EvalResult applyFunc(QueryExecutionContext context, List<Object> parameters) {
                 if (parameters.isEmpty())
@@ -203,15 +129,69 @@ public class XFRelations implements ExtensionFunctionClass {
                 }).toList();
                 return TextPatternRelationMatch.createRelMatchQuery(context, tps);
             }
+
+            @Override
+            public boolean isWebSafe() {
+                return true;
+            }
         });
 
-        QueryExtensions.register(FUNC_RSPAN, ARGS_QS, Arrays.asList(null, "full"),
-                (queryInfo, context, args) -> rspan(queryInfo, context, args));
-        QueryExtensions.register("rfield", ARGS_QS, NO_DEFAULT_VALUES,
-                (queryInfo, context, args) -> rfield(queryInfo, context, args));
-        QueryExtensions.registerRelationsFunction(FUNC_RCAPTURE, ARGS_QSS,
+        /*
+         * rspan: change span mode of a query with an active relation.
+         * <p>
+         * That is, change the spans the query produces to the source or target
+         * spans of the active relation, or the full relation span, or to a span
+         * covering all matched relations.
+         */
+        QueryExtensions.register(FUNC_RSPAN, List.of(PQuery.required("query"),
+                        PEnum.of("spanMode", RelationInfo.SpanMode.class)),
+                Arrays.asList(null, "full"),
+                (queryInfo, context, args) -> {
+                    if (args.size() < 2)
+                        throw new IllegalArgumentException("rspan() requires a query and a span mode as arguments");
+                    BLSpanQuery relations = (BLSpanQuery) args.get(0);
+                    RelationInfo.SpanMode mode = RelationInfo.SpanMode.fromCode((String) args.get(1));
+                    return new SpanQueryRelationSpanAdjust(relations, mode, null);
+                });
+
+        /*
+         * rfield: get the hits from a specific parallel field/version.
+         *
+         * This is useful to e.g. highlight one of the versions with the hits from a parallel query.
+         */
+        QueryExtensions.register("rfield", List.of(PQuery.required("query"),
+                        PString.identifier("fieldOrVersion", true)), List.of(),
+                (queryInfo, context, args) -> {
+                    if (args.size() < 2)
+                        throw new IllegalArgumentException("rfield() requires a query and a field or version name as arguments");
+                    BLSpanQuery relations = (BLSpanQuery) args.get(0);
+                    String fieldOrVersion = (String) args.get(1);
+                    AnnotatedField field = queryInfo.index().annotatedFields().getByFieldOrVersionName(fieldOrVersion);
+                    if (relations.getAnnotatedField() == field) {
+                        // Nothing to do, just return query unchanged
+                        return relations;
+                    }
+                    return new SpanQueryOtherFieldHits(relations, field);
+                });
+
+        /*
+         * rcapture: Capture relations inside a span.
+         *
+         * Will capture all relations matching the specified type regex as a list
+         * under the specified capture name.
+         */
+        QueryExtensions.registerRelationsFunction("rcapture", List.of(PQuery.required("query"),
+                        PString.identifier("captureAs"), PString.any("relationType")),
                 Arrays.asList(null, DEFAULT_RCAP_NAME, REGEX_RELATIONS_ALL_CLASSES_ALL_TYPE),
-                (queryInfo, context, args) -> rcapture(queryInfo, context, args));
+                (queryInfo, context, args) -> {
+                    if (args.isEmpty())
+                        throw new IllegalArgumentException("rcapture() requires at least a query");
+                    BLSpanQuery query = (BLSpanQuery) args.get(0);
+                    String captureAs = context.ensureUniqueCapture((String) args.get(1));
+                    String relationType = RelationUtil.optPrependDefaultClass((String) args.get(2), context);
+                    AnnotationSensitivity field = context.withRelationAnnotation().luceneFieldRef();
+                    return new SpanQueryCaptureRelationsWithinSpan(queryInfo, field, query, null, captureAs, relationType);
+                });
     }
 
 }
